# FuraiEngine

./: .gitignore  CMakeLists.txt  LICENSE  README_en.md  README_jp.md
include/: Furai.hpp  paths.hpp
include/core/: time.cpp  time.hpp
include/graphic/: GUIComponent.cpp  Graphics.cpp  camera.cpp  camera.hpp  graphics.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp
include/graphic/shaders/: basic.frag
include/graphic/shape/: baseShape.hpp  polygon.cpp  polygon.hpp  rectangle.cpp  rectangle.hpp  shape.hpp
include/input/: input.cpp  input.hpp  keyCodes.hpp
lib/glad/: glad.c  glad.h
src/: debug.hpp  main.cpp
